langtools/test/tools/javac/TryWithResources/BadTwrSyntax.out
BadTwrSyntax.java:14:43: compiler.err.illegal.start.of.type
1 error
